--- a/InventtManage/ProductList.resx
+++ b/InventtManage/ProductList.resx
@@ -117,17 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAARhJREFUSEvd
-        lcFqwkAURQNS9OeEQisW7OeUbovQD9CF4EL/RikVav+gi7bQXeOZvDsTrTMYA7OoBw6E++5LIAlJcdmU
-        ZdnFe1ziG35Id7zAEXZVPw8Wb/EdT7HFG62dhnIHx27zTJ6wo9OkofRc1dsx1mniULi23jGqBBT/5Rf7
-        qhzCoIfJe65aQHEM90yOHzzhXTVOoFpAcYqBajWEc5vFUS2gOMVMtRrCjc0MxY3RmudFcQ3hl80MxY3R
-        mudTcQ3ht80MxY3Rmid6gVebGYobozVP9BZlf8jZX9MrPLhN+6gWUBxjhfFvEoN8nwoPhceq2o4HnSYN
-        pbyfaw/lPD+cfVh0v0z3dk1xjT/SHU9wiO1+mf+EotgBaGD8uJE9EyIAAAAASUVORK5CYII=
-</value>
-  </data>
   <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -137,9 +126,19 @@
   <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Column5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="Edit.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="Edit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAU1JREFUOE9j
@@ -164,6 +163,16 @@
         BEOWX1iArijOzWo1ACCddToAtg1Wu73i+6hUQBNFiwVY+4Jmk2WetVpgTybM9vsDL8COXmzTg56qnrEA
         f/4FLLcfDi9+wZ2D+0RiszmIx4NzQPKvSXTFvwvDbBZGhQIj0Uk1/7oLrvi3kV6E/QE6N9rG7YTjvgAz
         BS+e9RbOLAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAARhJREFUSEvd
+        lcFqwkAURQNS9OeEQisW7OeUbovQD9CF4EL/RikVav+gi7bQXeOZvDsTrTMYA7OoBw6E++5LIAlJcdmU
+        ZdnFe1ziG35Id7zAEXZVPw8Wb/EdT7HFG62dhnIHx27zTJ6wo9OkofRc1dsx1mniULi23jGqBBT/5Rf7
+        qhzCoIfJe65aQHEM90yOHzzhXTVOoFpAcYqBajWEc5vFUS2gOMVMtRrCjc0MxY3RmudFcQ3hl80MxY3R
+        mudTcQ3ht80MxY3Rmid6gVebGYobozVP9BZlf8jZX9MrPLhN+6gWUBxjhfFvEoN8nwoPhceq2o4HnSYN
+        pbyfaw/lPD+cfVh0v0z3dk1xjT/SHU9wiO1+mf+EotgBaGD8uJE9EyIAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="dataGridViewImageColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
