Created the sales page and the cashier side of the app

--- a/InventtManage/CashierMainform.resx
+++ b/InventtManage/CashierMainform.resx
@@ -118,75 +118,79 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="customButtons1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAABZxJREFUaEPt
-        2d1PW2UcB3B8WbxwGnfjEl0yxubmZLy2hbW0UN4OL32BgaXALqY3i95pMG4TssEmIlPjyNziEv8AYqZe
-        LruaTp0avdmyG02w0J7TNzh9Z+LY+Pn7Nc9J2Mp5oS3lQr7J76ac9nyew/M8fZ6nRVvZylZyD4yOPhm3
-        D9akbH1DyU73dKKz706i0xVJdGC1v47VG0m09d6Ocz3TidaeoXhzj4Hew96+ebnXc3RXyj4wmXT080m7
-        G5I2NyAeywWIB8Rj9UK8DYvrgXgr1RGItXRDrLnbF2vqmlhosr/MPq5widkGdyw6+y8mHQNLiIcs8Fhd
-        EGtyQrTRuRRtcExFrd0vsI/f2CS7B/pSzoEw4iEPeIhaHVh2iDbYg6Kls5fdJv+B48e3JZ2DVxCP8Lzj
-        IVJvw+qkugQ63TZ22/wk7HJtT3UNXt9wvAXL3AFiXfu1IMc9y26fW6Cj45mUc/D7AuJBNLVBxNh2g+7N
-        GNln0Tl4udB40Yh1mIOF2tYpxsguya6j7k3Ew0JNC4j6luwGNk6TLyE+vpn4BUMzzBuaxGA59yJjaU/K
-        2f+VFvwCdwT4ZieEEKwV7ze3g9fEQYjgyniY12NVN37JWNryT3d/MeKX1fBhBHuOvQXJW78Bf3ochEa7
-        Kt5Xx4H31BgkfrwFM643wG9sVcbrGrEB1vv+qqbdjKeelGNgQsuT9xx7G5bFCFBWHj4EfuxjEKw2RbwP
-        G0rXUui91IggweXxEK5qgHClZZzxlANW69OID6r1eeo2yV9/T0OkEEwYmwAe+7caXkrip19gFrHK+HoI
-        V1gEcLmeYkz5JLr6TVoGLPV54cxHGaD0f2IUG2FpfwTPy1w79/5pEBCtgodQuQUCFZYaxpRP0uEeVsNL
-        s40f+zw/8iGsLC8zEsvKCvjPX0B4WxovTH6efm116D1z742AV9+oCR8qM0O4zHyCMeWD6/nvtOCl2Yb6
-        PD9ydu1GTF5Ilxx+DrFa8aFDdRAqNV1lTPkkbK67WvHSbCM0dIIPZ5aMRlDy8OQZHoKlxjuMKR/Ei+vB
-        S7ONUN+OjRhduxEsOeFfM0Lw4OF5xpQP4v9dL16abajPe09iIx4brJT0gM0NT7XEmPJB/P1s8DTb8GZu
-        zT6fDr4mjH8GXp01WzwEXq3R0oBeMRs8zTayeCn4N378U5hF8PrxtRA4UKPehRB/Nyv8+akM/MqDB+l6
-        JNSIc5/ALILXiYfAfoOGQcz1XM0LXpoqh0YyBzZe6zt3HmbLcW7Xjqf6mjHlE2vpHc4XngYs9fnZoeG1
-        G3F2Ev5GsCb8K3oQ9unUv8gSXJdJC56WxL5h/AJbY3ngxddXf0lRn6cVaMa1Dx6C591T4C01quL9+/QQ
-        2KNXX0rQiRni55TwtBmh9XwCl9GrsxZemm2oz8+dOJPRiPgPP8MMYtXw/r26GSgqeoIxlUMnZkp42knR
-        ZmTG/eYjy2nvB2OKywNPWV168UZPnnJ/QYS/bH3gY3AFPFa1tuU0JdXs3In4e3J4aRsYMHK4nj8G8Zu3
-        0jCvAl6abTyHTOB55yTEbtyEP3HJ4tWCL6leDO4tX9+2Mmp1fqGEl7aBtBmh9bzWJTENWOrz1G00PfmS
-        auBLqi8wlvaIHR3PRxscfiW8yjYwm3k+Ay/sqRLmDxx4jrHWF7He7t5kPPh3V+V2Xhqx2C5vFl4orsjt
-        YItC+1DEf1toPF9c9Q1Om/n5ESRstW4Xje3XC/jkrwV3lufncFcKHXmLtS1XNhy/p/LSH/k+Xl8d0dDS
-        h/jwBuCDOQ9YrYmVmXeEq60XEb+UB/wS4qc8xZWF+YlpdcRy6675SstkuKKezwLv85dUTfh2VRT+R77H
-        Q7MFHTqFDpmHwqWmaTo9CB08HFmFjwT2628H9umnA3t1Q4ESgyFvM8xWtvK/TlHRfyImLn/C5NGhAAAA
-        AElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAA8FJREFUaEPt
+        mklsDnEYh0tirQrhgLrWViIItUaEuDk6EHe0tri4SVxIBAm1xAXR1IG4SFzEQRWREk0ldg6WRGINErHX
+        8/vPO+l80+n3zTTfjGn0SZ58/S/vvO9k9plW9NNPH6Szs3MqNuIhnGLdfQsKn4Dv0Ud/T7DhfEFhI+3P
+        bjDWpOpDNNtwNxgbhYOsmQ0kXIpPUbTifBty0K7HPxoMob56m+agvQC1DPEKl9hQ+pDsmUvbhQpsw7PY
+        ro4SaI7mKia8wo8tTbqQaKiXL1WGWLr0IEmVlytVqixdepCk1suVKrWWLj1IcsTLlSqNlq58sNAROBon
+        oS5sUWejcqMcyqWcyj3CykkOwYvwBeaF57jAyosPQU9ceL54aOXFg4CRXlwuqbQy40HANS8uV7RaefEh
+        aLEXmxt0Aqiz8pJB4G23iHzQZmUlh+CoO9h/xWkrKxkEDsC7bhH5oMNKSwaBW734Al7jCdyHF/AXhrmO
+        urM9h8GL50tU/2XXKuQGaizsTwyy2corDZPH4xkXVshFHG7THLRn4UcNGr+x2oY1rgJ9zlpfndcsYLUL
+        CEH/F2+4ANU2zqZEw4Rp+FazI5hpcw7iY1xr7d3oc9X63Mrwu831epRcEX7XYbEt4vMGJysmEgaPumnR
+        TLQ52/ERRt1zuU3P73kciBNRW0nEWZG9XjMWhxQTCYPF7mx32jQH7THYgJ80CCpYLxzGoo6deTbPf4xN
+        tGvRV+pxoeiKFNu1xCXciLMsRDHaQqLF2tPxOC639mYUcbbIMtxhHsCeKL5rCSZEHezfUMWdci2PYzZ/
+        pdfsbHALCEG/tpK2Vrl2rWYsfrAHYfIWF9ZFjfWvwT04w9q7ULvSeGvfRL2c0AnBPUfw24L+ilTinIA6
+        HfsrUoMrAn7FIJs0LzEEdnjxjjs414Y0NhjX43e8Yn3arYKssn4dS25FwtCv6023Y0TQHzz9tlt3cgiO
+        ukX5jHrI+eFa2XHSykoOwdoKeeGWlZUMArWP5g13JkwEQXl8sHKn+NgQkMVLuN4yzMqMBwE6feaN+1Ze
+        fAiajQ9deD54gL171A3CQnSxyvIFne6y3UU4FVj4YWVKmZ5vCMsFSbJ4iT3V0qUHSbI4oyV7CdcbSJLF
+        h55sviWSSE+IQXRw6gFKLybifHrTrY/m6qIbPnncszTpQ7J56L/kjvoYqrvdqLOb+jbYNAfthejfReja
+        NceGsoOkxT5PR72JabLhbjDW47L+KRRWjR9UvfEO8/kPA6WgcL0D0LP3fuyb/8LRz/9NRcVfZeYkQ0T1
+        TcYAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="customButtons1.ImageHover" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAACEBJREFUeF7t
-        nGtsHFcVxx0eHyhQ+ISo1CJRhBASICQq0UogVbQg+AAfkCKEWns3+5jxQ1GTYO/OYzddByd2vPHO7Dp2
-        bO/OvvxIYzt+1Y7XdRKSym1Jo4TWbUOb0JZWIkoEDbh2HON1fblnfCYPZ9xmG+/sLJ6fdGTtmdmdc/66
-        c19nxiUW60RZu/cbjoSYccT5WYciEHdLgLj9QcLwEtgMtbfdgjTECFJVZaDlS/g1C2BLfMcDziR/JfK8
-        sjTw5igBk08qxBETqYj7NBFvmCD9k+EkF37dwpUSMuGTsexzfz9GbjbpRDTrSoljWwOReyvFpgfcvOym
-        Ap7WhHTzUg/DtH8ef2bjYo9z14bfOnKLeGBDb40RW9w7j6ddh+Wk31MB4bYmDBfqRPfGxa5QAc+P3yYg
-        iKonIMDy0iNUwDkQkeXk36F7Y+JMihOSzi0corewMyGO42m3wXKhcrUV8tKFzZt7P4vujceTiuc7jgQ/
-        I59Qlp69ME7AQidiWfDZEzXfxtNuA0Sjg8l5EJGO0L9C98ZEm8ZAfwi3NAwstvaab+HhNaEjcmClFYbC
-        6LLIBVaQf4638YvossiF8urg11DA2UAg8Bl0W+QCFe8yiFjBSQ+iyyIX6JTmGAhIJ9q/QZdFLtCJtQwC
-        unY1dts7an7oUDxfxkMWdwKsi0FAtn7vR2yn/0Ob4lnakuA+dKbFNxxJYaBM8ewqi3lsZYr3J0+2C/fh
-        1yw0XGLTwyBg1e7wsjYJH72QIc9MD5LoqW66po6RXePhhR19e/7NpH0ztphnic4xL7mS4il7gktQcb2l
-        sZrNtij3oye6tt6LP7txgO0tKuAyI4RI5p2jt6xm9CzzziQZ+OsoSZ3tJa1TSVI/2XqNH2q8UtUTuGKL
-        cdktce6qMymch40MKm6DLephyuLVjzvi3IMlpGQTXvb/Cyrge9AK+86M6YqWi8EaXBO3YbI1Kwzvm6vq
-        qf0PFXahLOaFFdJFZ0KYol1Cx82td3Pv9i9gOMUH7QdHQMC2iUO6oqyXreoalp4+Ep7Z3rv7A+gaaF+7
-        7EhwV7BrUG4Wl2n3fgVDNScML+8GAes6Fd3EjbCP6xrsinfRHvfO0UHtnEPhB1d3DQVfBOAeIamW9usm
-        ZwbTWm/bS+lbxF3dNZQqnvZbW2/gHkwzf5QL4e+BgBW18vWRuGjs3ZXN486/9JPWF9OkcbJtSRxumt3a
-        UzvjiPMLtK/NOpP8e44kf9wW8+7FlNcX2NpneXkRRuIjFyb1Ay1Sg5Z7cHqA7J7YT9hO3xlMef1xC6Fz
-        0AoPnhrRDaTYLTAmZ+ngVIPprj9qkYkKGB7p0Q2g2M2d8l2zJ7zfx3TXH4YPCSDgzliHbgDFbH1vjBDa
-        B87kdSIPuzEg4LZgs24QxWzNz8cJk/aPYKr5weVr/iYIyPpzH4nptEHXr1m+j3+SeQcb50tjnlJMNV+Q
-        TYwgXQURR85ldANZy8wsYObdo4TOFRftiZqvY6L5g4r3MgiYnhrSDWYtM7OAXa/0E2dSfB9TzC+0BUZB
-        wH39ad1g1jIzCxg81r7sSgqtmGJ+oXPBp0BA4cAB3WDWMjML+NQzdXP2WM0vMcX8wgrhx0DArfWybjBr
-        mVkFhFWIPe5dNGQ9DFwvc4ohdY2pF5SemVXA2KkeOn3xncX0jMEtSB+AiAPTtz+wtJaZVcBd45FFW5wT
-        MTVjoEs6tcwZO96vG5SemVVANu2bhy0tTM0YtDLnnu64blB6ZkYBD597lsAjz4ZvtmplTk+kRTcwPTOj
-        gPunkoTp9B/BtIyD4eUfg4CVdXe+pDOjgNxgcL5U8TgxLeO4UeaUSObtTy5zgplNQCjPbknw/30i6rkf
-        0zIWhg+9D62w78yoboCrzWwCdr96mNDVx0VMx3ioeMMgYMv4Qd0AV5vZBGw63rHsTAlRTMd4tDJnbSqq
-        G+BqM5uA2w7VzdoUT+GeNtPKnDtCxbe5Ova3CWKDMmchnzLTypzltVLRlTnjpw8Sd1KcxlQKw0qZU8pC
-        mXP0/HO6gZrV6jLNdPnmrcVUCgddE6tlzu4/F1eZs6LLP1emVD+CaRQOrcwpD3XpBmpGgycU4FWPRwOB
-        z2EahUMrc/qjbbrBmtHqJ1qW3CkxjSkUFlYM/RoE3NYY0Q3WTAbvCu49euAjV0q8bEjx6E7QypyM2KTO
-        w8xsziQ/x3b5+0z2DDfZRAVceS1WkKyHyz8NLCe/pArIhX6BLotc0MqcdD74B3RZ5IJW5qRLuwS6LHLB
-        xUk/U1sgL51Gl0Uu3PQ251Xrbc5PCRVPfZuT9YXXfPvd4mOgK5KjqoC89Ft0WeSCVuZ08/JOdFnkAv7D
-        HphM96LLIhdcgvwDVUBe+ge6LHJDXdJdBBFhWoNOi1xgOMkPAsLSjk5nCr/XVmzYA9JXqYBqrRgGFXRb
-        5IKLD/2UCrgAIro5KQX/FQ4PWdwpuMk6DyJS+5dbkBqo76Ht20PF+7K00bg80nfdvDSFIprOMEzzQ2/j
-        x2nAbdRep7aoJVBow/CKg9Lq4BcrfOHX+GByNjE0RQ5NniXw1xtMLFSIkdfgOJ56Vxh1HcOhSe3hgqm5
-        wROvk6GTNww+exsTc+W+cB2eelcYdR3DqfA3X06NvKAm09AxQKp2NpOG6KD6OTn8Aqn0RS7hqXeFUdcx
-        HJaXl/qPvaImUuGLqH1Qpb9Z/Qx+VpCzeOpdYdR1DGd1yygXw4a0wHxdx3DK/eF6Ppi6lu++yajrGM7K
-        6BhRR0doCYf/9CpJjEwRbm9yttwXmV7fUTj/1ykITKD9HmgBVf7mSwwvL8NfOrX4I/jxlHXBqOtYWFgU
-        CSUl/wPlEhIJSWvJHQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAABdZJREFUaEPt
+        mluoVFUYx828BXbFLmqpWWFhZGpBilhRUFK9lPZgURSlKSUYUg+RUBnpS1Eq1UNGBhpmREYEESR2eYhM
+        utDNLgZF2P1edFv9fmt/ezwzcw7nnHHOzBT+4M+Z9V/fXuvbe9Zee+01Z9A+/q+klK5Au9Cn6C50RFRV
+        0Is6Yz5BV0ZVZ0BCF6J/0N/xV35B96AxaGx81pOusRdEM+2FRI5BXyNZgKagjegvDfg9JHobkDHXacBX
+        6Ohorj2QwBD0otnAhrAzlI9DD6DfQvfrRXWGsicl29CQsAcWOpqK5qLLkFf+RuSVl/fQgRFaBf5RKopV
+        eAx6H4knZZu2bR/2dWqENgcavBf1xK/olAjtNxzrMPMb64m7I3TvoKEJyJvSsfwgcoisRLejm9F5Edow
+        tHF+tGWbtm0f9lXeexMjtHFoZF7RVno4rJZhn0XXaV5YjUMjy4u20k1htQz7LLpOy8NqHBopb+iLwmoZ
+        9ll0nTaG1Tg0sqNoK50QVsuwz6LrtCOs/sPBLie84XwC+0DbP6pahn1G3042Ts99f3ASPBw5Nn9A8h26
+        Pqpbjn1HDvIzugWNiOruIWAS+gCJywmfzIdHddswh8ilXPbsRJOiuh4qn89hKW1FU8LuGMwpcpPnwq6H
+        yg+LmDQmrI6D3FxJy86w6qFyfRGTFoTVcZhbkWJaH1Y9VM4pYtILYXUc5lakmOaEVQ+VQ5HrG6fcquFF
+        +VB0LXJN5LvEkVFVBf4s5FU7KKwM5ZHhd3uT4k+O+lrNjxBjfEkzN3McGnb3EFCubxaGpee7xW7knP4x
+        crX6LaqaECjvh8pZb3HYGcrjCztdFVYV+E6z4uvyR120LUKMWYik93UfQWuK2LQuLD2nvp9QfiDx9zDk
+        FPhUDggon4l8eD2LtoedodzXExkVVh3UrStC0pqwuoeAmcivzqTHha3/CHIOnx6W3sloZhQzlB9Fvu3N
+        RjI1qqxrxomMQ+ZmjlV9V6DC++MtJEvDzlCejn5EXu230X3onKjOUD4E+ZJ1DRqMPkNro9r6RodW7RBd
+        isRc6+8TzGW5OqXXUd37M57D6Wq0CX2PpDJW+bwY/Yl8JZ6I/HZcWhwQ9X09kfKFrdSMCMlQdp/AHGVZ
+        2AUYrq+8eU1kWtgZyt7AzlanhaU3Aj2DJM9e/C0br+XyqN/roVVCzDRkruY8LOxc4bBw2DitjQ27At67
+        6GVUOYjPvo46VkchGxY36ZymSzkhbI34Zp6IT3dzNeeDwy7AeByJy5TxYWcoX4pM+h3k0PKGlrwxwN+1
+        yHsoD6MSyg4NO/O9ojyRWnZFbHkiDkevdKndubGAsu2US6lNYe8Bcxh6Mlen9AWaHFUZyo79Vegx5LdR
+        ebLy2c2Ds6JYAc9vxXd+7xmH47ndaFbEHo+MrdUluTHgszOluYm57hlWXbECbTYKfAA2vM3TbMwlchJH
+        T69Pdk/mCaMhj+9OwFyKlPKF7v6bqIVAn9CyJay2Qy5PFyml2WH1DsFuV8pDYbUdcimXJ3PD6h2CFxXH
+        pJVhtR1ycaKRRWH1DsHlplz1k7ONmEuRUj826wguz75tuye1mEuRUloVVu8QXN4jPgRfQ3egGahle1v2
+        FX3atzmYi1wcIX2DAxxe5W54yTdowCcA+4i+umIut0ZI/+BAr8oZ6Db0KiqvytkR0nRsu+gi92Wf9m0O
+        zRsNNLYEyeawmg5tlw/jJWE1Hxp3A8F3Ed8Wjw27adgm8puwj5FhDwx0sBrJirAylH2nOR05UQwOuw7r
+        IsbY4WFnKN+JZHVYAwednIhcmn+JbkBuTGxHf6ASV6Z1V1Qv6ko8xhnJNmzLn/dsu+d93WZCR+WPP11x
+        U+Al9HkupfQGmhCHeIy/Rb5pBRhjrLvrtVT9zD2g0JkbFe4xrUDz0Ukozyr8HY1eQeK35o6K8rNYNzpi
+        nRU91p+jbcsNudb83t4XSMb7xWdBLXpV98V/ApL2Crsz6T/QdOzG+D6az6BB/wIJXn/nPK0ZGgAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="customButtons1.ImageNormal" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAA8FJREFUaEPt
+        mklsDnEYh0tirQrhgLrWViIItUaEuDk6EHe0tri4SVxIBAm1xAXR1IG4SFzEQRWREk0ldg6WRGINErHX
+        8/vPO+l80+n3zTTfjGn0SZ58/S/vvO9k9plW9NNPH6Szs3MqNuIhnGLdfQsKn4Dv0Ud/T7DhfEFhI+3P
+        bjDWpOpDNNtwNxgbhYOsmQ0kXIpPUbTifBty0K7HPxoMob56m+agvQC1DPEKl9hQ+pDsmUvbhQpsw7PY
+        ro4SaI7mKia8wo8tTbqQaKiXL1WGWLr0IEmVlytVqixdepCk1suVKrWWLj1IcsTLlSqNlq58sNAROBon
+        oS5sUWejcqMcyqWcyj3CykkOwYvwBeaF57jAyosPQU9ceL54aOXFg4CRXlwuqbQy40HANS8uV7RaefEh
+        aLEXmxt0Aqiz8pJB4G23iHzQZmUlh+CoO9h/xWkrKxkEDsC7bhH5oMNKSwaBW734Al7jCdyHF/AXhrmO
+        urM9h8GL50tU/2XXKuQGaizsTwyy2corDZPH4xkXVshFHG7THLRn4UcNGr+x2oY1rgJ9zlpfndcsYLUL
+        CEH/F2+4ANU2zqZEw4Rp+FazI5hpcw7iY1xr7d3oc9X63Mrwu831epRcEX7XYbEt4vMGJysmEgaPumnR
+        TLQ52/ERRt1zuU3P73kciBNRW0nEWZG9XjMWhxQTCYPF7mx32jQH7THYgJ80CCpYLxzGoo6deTbPf4xN
+        tGvRV+pxoeiKFNu1xCXciLMsRDHaQqLF2tPxOC639mYUcbbIMtxhHsCeKL5rCSZEHezfUMWdci2PYzZ/
+        pdfsbHALCEG/tpK2Vrl2rWYsfrAHYfIWF9ZFjfWvwT04w9q7ULvSeGvfRL2c0AnBPUfw24L+ilTinIA6
+        HfsrUoMrAn7FIJs0LzEEdnjxjjs414Y0NhjX43e8Yn3arYKssn4dS25FwtCv6023Y0TQHzz9tlt3cgiO
+        ukX5jHrI+eFa2XHSykoOwdoKeeGWlZUMArWP5g13JkwEQXl8sHKn+NgQkMVLuN4yzMqMBwE6feaN+1Ze
+        fAiajQ9deD54gL171A3CQnSxyvIFne6y3UU4FVj4YWVKmZ5vCMsFSbJ4iT3V0qUHSbI4oyV7CdcbSJLF
+        h55sviWSSE+IQXRw6gFKLybifHrTrY/m6qIbPnncszTpQ7J56L/kjvoYqrvdqLOb+jbYNAfthejfReja
+        NceGsoOkxT5PR72JabLhbjDW47L+KRRWjR9UvfEO8/kPA6WgcL0D0LP3fuyb/8LRz/9NRcVfZeYkQ0T1
+        TcYAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
