--- a/InventtManage/AdminLists.resx
+++ b/InventtManage/AdminLists.resx
@@ -118,6 +118,79 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAARhJREFUSEvd
+        lcFqwkAURQNS9OeEQisW7OeUbovQD9CF4EL/RikVav+gi7bQXeOZvDsTrTMYA7OoBw6E++5LIAlJcdmU
+        ZdnFe1ziG35Id7zAEXZVPw8Wb/EdT7HFG62dhnIHx27zTJ6wo9OkofRc1dsx1mniULi23jGqBBT/5Rf7
+        qhzCoIfJe65aQHEM90yOHzzhXTVOoFpAcYqBajWEc5vFUS2gOMVMtRrCjc0MxY3RmudFcQ3hl80MxY3R
+        mudTcQ3ht80MxY3Rmid6gVebGYobozVP9BZlf8jZX9MrPLhN+6gWUBxjhfFvEoN8nwoPhceq2o4HnSYN
+        pbyfaw/lPD+cfVh0v0z3dk1xjT/SHU9wiO1+mf+EotgBaGD8uJE9EyIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnAdd.ImageHover" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAXVJREFUSEvd
+        lV0rBFEchye77EfzUkppo/hG3rlaUVyIhC/gwgegcCGSl0uhXCzlzvH81v84Z8yMiWYveOqp/b+cPTNz
+        Zs5J/jfOuQZO4i5e45Op3zs4gQ1r/xkMbOItigfUJHPmHj6iuMFRG1YOzXVc0Eg4xgHssfIn5Go4iKco
+        NHHNysXQtNhpd24W65YuRD04rwEwZel8aBj/6CtpzIExuqA3HLZUGgpaUD3zQ8y9VfKruGJhCo1BPdJL
+        7LV0gKS/+n5LZaB2IC3MQG1IfwBNSwVIbuEdZhbUQ61sAt3FPW5YKkBSt7ZpYS7Uv51AUN/GcwsDJJ8x
+        tbjEeuZHkW0zzqXWhHga2xYGSL7g1wlauB/pv+Q4t2TtHYgLJ6jyEV1YGCDZ9UXu+mvah1eohSv60Jax
+        ZWEKjcHiD01QGEFR/VbhoWEGRfWbnaBJt+q36xOsdrv20BwfODpcqjlwYhioHVZv1zqe4aup32s4hr87
+        Mv8ISfIOUEajaWNwPC4AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnAdd.ImageNormal" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAARhJREFUSEvd
+        lcFqwkAURQNS9OeEQisW7OeUbovQD9CF4EL/RikVav+gi7bQXeOZvDsTrTMYA7OoBw6E++5LIAlJcdmU
+        ZdnFe1ziG35Id7zAEXZVPw8Wb/EdT7HFG62dhnIHx27zTJ6wo9OkofRc1dsx1mniULi23jGqBBT/5Rf7
+        qhzCoIfJe65aQHEM90yOHzzhXTVOoFpAcYqBajWEc5vFUS2gOMVMtRrCjc0MxY3RmudFcQ3hl80MxY3R
+        mudTcQ3ht80MxY3Rmid6gVebGYobozVP9BZlf8jZX9MrPLhN+6gWUBxjhfFvEoN8nwoPhceq2o4HnSYN
+        pbyfaw/lPD+cfVh0v0z3dk1xjT/SHU9wiO1+mf+EotgBaGD8uJE9EyIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Edit.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="Edit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAU1JREFUOE9j
+        oCvYHpdkeS0y8vTtpKRrl4KCyqDCxIElvUUxcxau+LN/2vz/3/v7/9+Kj78GlSIMFs5ujVm+advvG8+/
+        /j907tb/XdMX/L8SEXEKKo0fHFzir7tyWf/7g0CNN4EGXH/25f/M+Sv+rktKs4EqwQ2OLAo2ub435+7/
+        d4v+Hzy08v+uE5f+z1+17ueqznw/qBLcAKT52t68OyDN/98t/v/39cL/y5b1vp0xu9UVqgQ3gGjORdF8
+        YWvq9f3zPRSgSnCDw0sDjMnXvAqkOec2WZq3zPALurgt8ydZmv8zMDDunh3+9OnZBrDmf28W/r+4Pe3m
+        /vnBGlAl+EFRik/4mVW5X+7vyfv/6FTN/7ObU39tmeptBZUmDOKj/C8Fh4b+P7Is6/vOWSHPtk4P8YFK
+        EQcCA33eJsT6XynP9otoaGhgggrTAzAwAAC0CuaScsavFgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="Delete.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="Delete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAW5JREFUOE+l
+        U8tOwlAQbfRPNP5I3yyBkJion8ArAdaseCyA3yCGDXtiFGJoy0YWxhh3StCNUURLoNhx5tqWFtAgTjK5
+        mTvnzNyZO8P5BfL5HY3nT4xQ6NxQlGddkkw6ydYE4Zj8DnRVLnl+H8E3/Wh0/JTLwXu57CnZdG+o6nVP
+        FPccykI0STrQZfl1kErNJ7Ua/KTotzTEUTKHynGnsdiurih3g3T6cx1pWR+SyTnib71yuoJw1I9Exi5g
+        Wq/DtNEIkMime9e+Qjz25JAFwLraj1ijH2ybphdk2SYdZjJAjWUBsKbRuFTynIyE2Yhk6fo32Zed9K1Y
+        BEOWX1iArijOzWo1ACCddToAtg1Wu73i+6hUQBNFiwVY+4Jmk2WetVpgTybM9vsDL8COXmzTg56qnrEA
+        f/4FLLcfDi9+wZ2D+0RiszmIx4NzQPKvSXTFvwvDbBZGhQIj0Uk1/7oLrvi3kV6E/QE6N9rG7YTjvgAz
+        BS+e9RbOLAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="dataGridViewImageColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAU1JREFUOE9j
@@ -130,68 +203,6 @@
 </value>
   </data>
   <data name="dataGridViewImageColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAW5JREFUOE+l
-        U8tOwlAQbfRPNP5I3yyBkJion8ArAdaseCyA3yCGDXtiFGJoy0YWxhh3StCNUURLoNhx5tqWFtAgTjK5
-        mTvnzNyZO8P5BfL5HY3nT4xQ6NxQlGddkkw6ydYE4Zj8DnRVLnl+H8E3/Wh0/JTLwXu57CnZdG+o6nVP
-        FPccykI0STrQZfl1kErNJ7Ua/KTotzTEUTKHynGnsdiurih3g3T6cx1pWR+SyTnib71yuoJw1I9Exi5g
-        Wq/DtNEIkMime9e+Qjz25JAFwLraj1ijH2ybphdk2SYdZjJAjWUBsKbRuFTynIyE2Yhk6fo32Zed9K1Y
-        BEOWX1iArijOzWo1ACCddToAtg1Wu73i+6hUQBNFiwVY+4Jmk2WetVpgTybM9vsDL8COXmzTg56qnrEA
-        f/4FLLcfDi9+wZ2D+0RiszmIx4NzQPKvSXTFvwvDbBZGhQIj0Uk1/7oLrvi3kV6E/QE6N9rG7YTjvgAz
-        BS+e9RbOLAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="dataGridViewImageColumn3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAW5JREFUOE+l
-        U8tOwlAQbfRPNP5I3yyBkJion8ArAdaseCyA3yCGDXtiFGJoy0YWxhh3StCNUURLoNhx5tqWFtAgTjK5
-        mTvnzNyZO8P5BfL5HY3nT4xQ6NxQlGddkkw6ydYE4Zj8DnRVLnl+H8E3/Wh0/JTLwXu57CnZdG+o6nVP
-        FPccykI0STrQZfl1kErNJ7Ua/KTotzTEUTKHynGnsdiurih3g3T6cx1pWR+SyTnib71yuoJw1I9Exi5g
-        Wq/DtNEIkMime9e+Qjz25JAFwLraj1ijH2ybphdk2SYdZjJAjWUBsKbRuFTynIyE2Yhk6fo32Zed9K1Y
-        BEOWX1iArijOzWo1ACCddToAtg1Wu73i+6hUQBNFiwVY+4Jmk2WetVpgTybM9vsDL8COXmzTg56qnrEA
-        f/4FLLcfDi9+wZ2D+0RiszmIx4NzQPKvSXTFvwvDbBZGhQIj0Uk1/7oLrvi3kV6E/QE6N9rG7YTjvgAz
-        BS+e9RbOLAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="dataGridViewImageColumn4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAU1JREFUOE9j
-        oCvYHpdkeS0y8vTtpKRrl4KCyqDCxIElvUUxcxau+LN/2vz/3/v7/9+Kj78GlSIMFs5ujVm+advvG8+/
-        /j907tb/XdMX/L8SEXEKKo0fHFzir7tyWf/7g0CNN4EGXH/25f/M+Sv+rktKs4EqwQ2OLAo2ub435+7/
-        d4v+Hzy08v+uE5f+z1+17ueqznw/qBLcAKT52t68OyDN/98t/v/39cL/y5b1vp0xu9UVqgQ3gGjORdF8
-        YWvq9f3zPRSgSnCDw0sDjMnXvAqkOec2WZq3zPALurgt8ydZmv8zMDDunh3+9OnZBrDmf28W/r+4Pe3m
-        /vnBGlAl+EFRik/4mVW5X+7vyfv/6FTN/7ObU39tmeptBZUmDOKj/C8Fh4b+P7Is6/vOWSHPtk4P8YFK
-        EQcCA33eJsT6XynP9otoaGhgggrTAzAwAAC0CuaScsavFgAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Delete.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="Delete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAW5JREFUOE+l
         U8tOwlAQbfRPNP5I3yyBkJion8ArAdaseCyA3yCGDXtiFGJoy0YWxhh3StCNUURLoNhx5tqWFtAgTjK5
